--- a/style.css
+++ b/style.css
@@ -63,6 +63,10 @@ h3, h4, figcaption{
     padding: 1% 5%;
 }
 
+.btn:hover{
+    background-color: rgb(169, 169, 184);
+}
+
 .btn a{
     text-decoration: none;
     color: black;
